force-app/main/default/objects/Opportunity/fields/AccountFirstName__c.field-meta.xml
<CustomField>
    <fullName>AccountFirstName__c</fullName>
    <formula>Account.FirstName</formula>
    <label>AccountFirstName OLD</label>
    <type>Text</type>
</CustomField>