force-app/main/default/objects/Opportunity/fields/BillingToCustomer__c.field-meta.xml
<CustomField>
    <fullName>BillingToCustomer__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use Account Billing as Customer Address</description>
    <label>Use Billlng Address as Customer Address</label>
    <type>Checkbox</type>
</CustomField>