force-app/main/default/objects/Opportunity/fields/Building_Country_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Building_Country_Attribute__c</fullName>
    <formula>TEXT(Building__r.BuildingAddress__CountryCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Country Attribute</label>
    <type>Text</type>
</CustomField>