force-app/main/default/objects/Opportunity/fields/Building_Height__c.field-meta.xml
<CustomField>
    <fullName>Building_Height__c</fullName>
    <description>Later: possibly later consider moving to building</description>
    <inlineHelpText>Indication of the Building Highest Level (mm)</inlineHelpText>
    <label>Building Height DEL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>