force-app/main/default/objects/Opportunity/fields/Building_Permit_Approved__c.field-meta.xml
<CustomField>
    <fullName>Building_Permit_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is marked when the Building Permit has been approved by the city authority.</description>
    <inlineHelpText>Please mark this field when the Building Permit has been by the city authority.</inlineHelpText>
    <label>Building Permit Approved</label>
    <type>Checkbox</type>
</CustomField>