force-app/main/default/objects/Opportunity/fields/Business_Type_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_Attribute__c</fullName>
    <description>Attribute to Identify the Type of Business</description>
    <formula>Text(Business_Type__c)</formula>
    <inlineHelpText>Attribute to Identify the Type of Business e.g. Consumer, Reseller, Project</inlineHelpText>
    <label>Business Type Attribute</label>
    <type>Text</type>
</CustomField>