force-app/main/default/objects/Opportunity/fields/Chargeable__c.field-meta.xml
<CustomField>
    <fullName>Chargeable__c</fullName>
    <formula>IF(
   TEXT(Order_type__c) == &apos;Normal&apos;,
   IF(Project_Number__r.Chargeable__c = TRUE ,True,False),
   IF(TEXT(Order_type__c) == &apos;Reclamation&apos;,
       IF(TEXT(Case__r.Process_Class__c) == &apos;Additional_order_11&apos;,True,false),
       true
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chargeable OLD</label>
    <type>Checkbox</type>
</CustomField>