force-app/main/default/objects/Opportunity/fields/Close_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason_Details__c</fullName>
    <description>This Field allows additional text on reasons why the Opportunity was lost.
This custom field is part of the B2C lead to order process.</description>
    <inlineHelpText>Please fill in more details about why the Opportunity was lost.</inlineHelpText>
    <label>Close Reason Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>