force-app/main/default/objects/Opportunity/fields/Combined_load__c.field-meta.xml
<CustomField>
    <fullName>Combined_load__c</fullName>
    <description>LATER post-pilot consider moving to building</description>
    <inlineHelpText>Indication of the Combined Load</inlineHelpText>
    <label>Combined load DEL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>