force-app/main/default/objects/Opportunity/fields/Confirmed_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Delivery_Date__c</fullName>
    <inlineHelpText>This date is received from ERP.</inlineHelpText>
    <label>Confirmed Delivery Date DEL</label>
    <type>Date</type>
</CustomField>