force-app/main/default/objects/Opportunity/fields/Confirmed_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Installation_Date__c</fullName>
    <description>Confirmed or Planned Day of Installation</description>
    <formula>DateValue(Confirmed_installation_time__c)</formula>
    <inlineHelpText>Confirmed or Planned Day of Installation</inlineHelpText>
    <label>Confirmed Installation Date DEL</label>
    <type>Date</type>
</CustomField>