force-app/main/default/objects/Opportunity/fields/Confirmed_installation_time__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_installation_time__c</fullName>
    <description>To plan for installation, a Confirmed installation date &amp; time will show in this field. 
This data is captured from the Installation Capacity component. 
This custom field is part of the B2C lead to order process.</description>
    <inlineHelpText>The Confirmed installation date and time.</inlineHelpText>
    <label>Confirmed installation time DEL</label>
    <type>DateTime</type>
</CustomField>