force-app/main/default/objects/Opportunity/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Is used in notification sending.</description>
    <inlineHelpText>This field is automatically populated by Person Account/Contact email, and used for sending notifications.</inlineHelpText>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>