force-app/main/default/objects/Opportunity/fields/Contract_Additional_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Contract_Additional_Agreements__c</fullName>
    <description>Contract Additional Agreements (To be filled by salesperson in case that additional agreements are done with the customer). These agreements will show up in the contract</description>
    <inlineHelpText>To be filled by salesperson in case that additional agreements are done with the customer. These agreements will show up in the contract</inlineHelpText>
    <label>Contract Additional Agreements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>