force-app/main/default/objects/Opportunity/fields/Contract_base_data_filled__c.field-meta.xml
<CustomField>
    <fullName>Contract_base_data_filled__c</fullName>
    <description>This is used for Contract PDF component conditional visibility</description>
    <formula>NOT ( ISBLANK(TEXT(Payment_Plan__c )))
&amp;&amp;
NOT (ISBLANK(TEXT( Invoice_type__c )))
&amp;&amp;
NOT (ISBLANK( Delivery_Location__c ))
&amp;&amp;
NOT (ISBLANK( Delivery_Date__c ))
&amp;&amp;
NOT (ISBLANK ( Count_Opportunity_Products__c ))
&amp;&amp;
IF 
(
((Installation_Time__c &gt;0 &amp;&amp; NOT(ISBLANK( Preliminary_installation_time__c )) ) || ISBLANK(Installation_Time__c)),
true,
false
)</formula>
    <label>Contract base data filled</label>
    <type>Checkbox</type>
</CustomField>