force-app/main/default/objects/Opportunity/fields/Contract_Language__c.field-meta.xml
<CustomField>
    <fullName>Contract_Language__c</fullName>
    <label>Contract Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Languages</valueSetName>
    </valueSet>
</CustomField>