force-app/main/default/objects/Opportunity/fields/Contract_Locale__c.field-meta.xml
<CustomField>
    <fullName>Contract_Locale__c</fullName>
    <description>Locale to be used by contract</description>
    <formula>IF(TEXT(Contract_Language__c) &lt;&gt; &quot;&quot;,LOWER(TEXT(Contract_Language__c)) &amp; &quot;_&quot; &amp; UPPER(TEXT(Building__r.StreetAddress__CountryCode__s)), &quot;fi_FI&quot;)</formula>
    <inlineHelpText>Locale to be used by contract</inlineHelpText>
    <label>Contract Locale</label>
    <type>Text</type>
</CustomField>