force-app/main/default/objects/Opportunity/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <formula>Contract.ContractNumber</formula>
    <label>Contract Number OLD</label>
    <type>Text</type>
</CustomField>