force-app/main/default/objects/Opportunity/fields/Contract_Price_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price_Agreements__c</fullName>
    <description>Contract Pricing Agreements (To be filled by salesperson in case that price agreements are done with the customer). These agreements will show up in the contract pricing section</description>
    <inlineHelpText>Contract Pricing Agreements (To be filled by salesperson in case that price agreements are done with the customer). These agreements will show up in the contract pricing section</inlineHelpText>
    <label>Contract Price Agreements OLD</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>