force-app/main/default/objects/Opportunity/fields/Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed__c</fullName>
    <description>This field is checked when associated final contract is signed</description>
    <formula>ISPICKVAL(Contract.Status, &quot;Signed&quot;) || ISPICKVAL(Contract.Status,&quot;Activated&quot;) &amp;&amp;  ISPICKVAL(Contract.Contract_type__c, &quot;Final Contract&quot;)</formula>
    <label>Contract Signed OLD</label>
    <type>Checkbox</type>
</CustomField>