force-app/main/default/objects/Opportunity/fields/Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date__c</fullName>
    <formula>Contract.CustomerSignedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Signed Date OLD</label>
    <type>Date</type>
</CustomField>