force-app/main/default/objects/Opportunity/fields/Count_Installable_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_Installable_Products__c</fullName>
    <description>Count of Products that require Installation</description>
    <inlineHelpText>Count of Products that require Installation</inlineHelpText>
    <label>Count Installable Products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>