force-app/main/default/objects/Opportunity/fields/Count_Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_Opportunity_Products__c</fullName>
    <description>Rollup Summary: Count of All Opportunity Products
This means all &quot;synced&quot; Quote Line Items</description>
    <inlineHelpText>Count of All Opportunity Products</inlineHelpText>
    <label>Count Opportunity Products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>