force-app/main/default/objects/Opportunity/fields/Country_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Country_Attribute__c</fullName>
    <description>Attribute to Identify the Country Specific Defaults and Sales Area (based on Account Billing Country)</description>
    <formula>TEXT( Account.BillingCountryCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Attribute to Identify the Country Specific Defaults and Sales Area</inlineHelpText>
    <label>Country Attribute OLD</label>
    <type>Text</type>
</CustomField>