force-app/main/default/objects/Opportunity/fields/CurrentOfferNumber__c.field-meta.xml
<CustomField>
    <fullName>CurrentOfferNumber__c</fullName>
    <description>Shows the Offer Number of the current Syncing Quote</description>
    <formula>NULLVALUE( Order_Number__c,SyncedQuote.OfferNumber__c)</formula>
    <inlineHelpText>The Offer Number of Synced Quote</inlineHelpText>
    <label>Current Offer Number</label>
    <type>Text</type>
</CustomField>