force-app/main/default/objects/Opportunity/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <label>Customer Address OLD</label>
    <type>Address</type>
</CustomField>