force-app/main/default/objects/Opportunity/fields/Customer_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attribute__c</fullName>
    <formula>IF( NOT(ISNULL(Account.AccountNumber)), Account.AccountNumber,&quot;&quot;)</formula>
    <label>Customer Attribute OLD</label>
    <type>Text</type>
</CustomField>