force-app/main/default/objects/Opportunity/fields/Customer_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Country__c</fullName>
    <formula>Account.BillingCountry</formula>
    <label>Customer Country</label>
    <type>Text</type>
</CustomField>