force-app/main/default/objects/Opportunity/fields/Customer_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Country_Code__c</fullName>
    <formula>TEXT(Account.BillingCountryCode)</formula>
    <label>Customer Country Code OLD</label>
    <type>Text</type>
</CustomField>