force-app/main/default/objects/Opportunity/fields/Customer_Financing__c.field-meta.xml
<CustomField>
    <fullName>Customer_Financing__c</fullName>
    <description>When a customer requires financing to complete the order it is important to log and track this information. 
This custom field is part of the B2C lead to order process.</description>
    <inlineHelpText>Please select Customer Financing option.</inlineHelpText>
    <label>Customer Financing OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self funded</fullName>
            </value>
            <value>
                <fullName>External financing</fullName>
            </value>
            <value>
                <fullName>Self-financed</fullName>
                <isActive>false</isActive>
                <label>Self-financed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>