force-app/main/default/objects/Opportunity/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>This selection segments the customer opportunity</description>
    <inlineHelpText>Please choose which type of customer engagement is about.</inlineHelpText>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Customer_Segments</valueSetName>
    </valueSet>
</CustomField>