force-app/main/default/objects/Opportunity/fields/Customer_Segment_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment_Attribute__c</fullName>
    <formula>IF(Customer_Type__c=&apos;Consumer&apos;, 
IF(Property_Type_Attribute__c =&apos;APT&apos;,&quot;Consumer Apartment&quot;,&quot;Consumer Single House&quot;), &quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Segment Attribute</label>
    <type>Text</type>
</CustomField>