force-app/main/default/objects/Opportunity/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Type of the Customer (from Account)</description>
    <formula>Account.Customer_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type OLD</label>
    <type>Text</type>
</CustomField>