force-app/main/default/objects/Opportunity/fields/CustomerToInvoicing__c.field-meta.xml
<CustomField>
    <fullName>CustomerToInvoicing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use Customer Address as Invoicing Address when Checked</description>
    <inlineHelpText>Use Customer Address as Invoicing Address when Checked.</inlineHelpText>
    <label>Use Customer Address for Invoicing</label>
    <type>Checkbox</type>
</CustomField>