force-app/main/default/objects/Opportunity/fields/Deliver_To__c.field-meta.xml
<CustomField>
    <fullName>Deliver_To__c</fullName>
    <inlineHelpText>Defines the delivery address. For address updates, see Account address, Delivery Location (Building/Factory), or Delivery Address (Other)</inlineHelpText>
    <label>Deliver To OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building</fullName>
                <default>true</default>
                <label>Building</label>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Site</fullName>
                <isActive>false</isActive>
                <label>Site</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>