force-app/main/default/objects/Opportunity/fields/DeliverToType__c.field-meta.xml
<CustomField>
    <fullName>DeliverToType__c</fullName>
    <inlineHelpText>Defines the delivery address. For address updates, see Account address, Delivery Location (Building/Factory), or Delivery Address (Other)</inlineHelpText>
    <label>Deliver To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Delivery_Options</valueSetName>
    </valueSet>
</CustomField>