force-app/main/default/objects/Opportunity/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <label>Delivery Address OLD</label>
    <type>Address</type>
</CustomField>