force-app/main/default/objects/Opportunity/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Date when Finished Goods are delivered to Site or Warehouse</description>
    <inlineHelpText>This is automatic calculation of estimated earliest delivery date</inlineHelpText>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>