force-app/main/default/objects/Opportunity/fields/Delivery_Date_Calc__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Calc__c</fullName>
    <formula>IF(ISBLANK( Confirmed_Delivery_Date__c ) ,  &quot;Est : &quot; &amp;  TEXT( Delivery_Date__c ) , TEXT(Confirmed_Delivery_Date__c ))</formula>
    <label>Delivery Date Calc</label>
    <type>Text</type>
</CustomField>