force-app/main/default/objects/Opportunity/fields/Delivery_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_End_Date__c</fullName>
    <inlineHelpText>Estimated Date for Goods to arrive on Site  (Delivery Start Date +Delivery Time)</inlineHelpText>
    <label>Delivery End Date</label>
    <type>Date</type>
</CustomField>