force-app/main/default/objects/Opportunity/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Delivery Location is not of allowed Type</errorMessage>
        <filterItems>
            <field>Location.LocationType</field>
            <operation>equals</operation>
            <value>Warehouse, Site, Factory, Building, Warehouse, Factory, Building, Account</value>
        </filterItems>
        <infoMessage>Site/Warehouse Location</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>