force-app/main/default/objects/Opportunity/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Delivery_Methods</valueSetName>
    </valueSet>
</CustomField>