force-app/main/default/objects/Opportunity/fields/Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note__c</fullName>
    <inlineHelpText>•	Name of the final recipient (company / person name )
•	Final delivery address
 
•	Recipient&apos;s contact information : 
   ( required : name, phone number, e-mail address ) 
 
•	Call request wishes ( e.g. 24 hours before delivery ) 
•	Unloading instructions
•	FIX delivery Day</inlineHelpText>
    <label>Delivery Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>