force-app/main/default/objects/Opportunity/fields/Delivery_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Start_Date__c</fullName>
    <inlineHelpText>First possible date for delivery to start after production ends</inlineHelpText>
    <label>Delivery Start Date</label>
    <type>Date</type>
</CustomField>