force-app/main/default/objects/Opportunity/fields/Delivery_Term__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Term__c</fullName>
    <description>Delivery Term selected</description>
    <label>Delivery Terms OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Delivery_Terms</valueSetName>
    </valueSet>
</CustomField>