force-app/main/default/objects/Opportunity/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <description>Delivery terms field based on Lumon_Delivery_Terms Picklist value set</description>
    <label>Delivery Terms DO NOT USE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Delivery_Terms</valueSetName>
    </valueSet>
</CustomField>