force-app/main/default/objects/Opportunity/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <inlineHelpText>The Time to Deliver in Calendar Days</inlineHelpText>
    <label>Delivery Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>