force-app/main/default/objects/Opportunity/fields/Delivery_Week__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Week__c</fullName>
    <formula>IF(NOT(ISNULL(Delivery_Date__c)),TEXT(Year(Delivery_Date__c))&amp;&quot;/&quot;&amp;TEXT(ISOWEEK(Delivery_Date__c)),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Week OLD</label>
    <type>Text</type>
</CustomField>