force-app/main/default/objects/Opportunity/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>Level 3 Classification based on District</description>
    <inlineHelpText>Level 3 Classification based on District</inlineHelpText>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Districts</valueSetName>
    </valueSet>
</CustomField>