force-app/main/default/objects/Opportunity/fields/District_Attribute__c.field-meta.xml
<CustomField>
    <fullName>District_Attribute__c</fullName>
    <formula>Account.District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District Attribute</label>
    <type>Text</type>
</CustomField>