force-app/main/default/objects/Opportunity/fields/Drainage_holes__c.field-meta.xml
<CustomField>
    <fullName>Drainage_holes__c</fullName>
    <defaultValue>true</defaultValue>
    <description>LATER: possibly moved</description>
    <inlineHelpText>Indication whether Drainage holes are required</inlineHelpText>
    <label>Drainage holes</label>
    <type>Checkbox</type>
</CustomField>