force-app/main/default/objects/Opportunity/fields/External_Financing_Response__c.field-meta.xml
<CustomField>
    <fullName>External_Financing_Response__c</fullName>
    <description>When a customer needs external financing the Credit check &amp; apply for financing process is required. 
This custom field should be used to log and track the status of the External Financing Response.  
This custom field is part of the B2C lead to order process.</description>
    <inlineHelpText>Please select the External Financing Response status</inlineHelpText>
    <label>External Financing Response</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Plan__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Granted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Waiting for response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>