force-app/main/default/objects/Opportunity/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Reference to the Factory where the Production is done</inlineHelpText>
    <label>Factory</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>