force-app/main/default/objects/Opportunity/fields/FieldServiceOffice__c.field-meta.xml
<CustomField>
    <fullName>FieldServiceOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Service Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Opportunities (Field Service Office)</relationshipLabel>
    <relationshipName>FieldServiceOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>