force-app/main/default/objects/Opportunity/fields/Financing_Provider__c.field-meta.xml
<CustomField>
    <fullName>Financing_Provider__c</fullName>
    <description>When a customer needs external financing the Credit check &amp; apply for financing process is required. 
This custom field should be used to enter the Financing Provider&apos;s company name. 
This custom field is part of the B2C lead to order process.</description>
    <inlineHelpText>Please fill in the company name.</inlineHelpText>
    <label>Financing Provider</label>
    <length>120</length>
    <type>Text</type>
</CustomField>