force-app/main/default/objects/Opportunity/fields/Finland_Sync_to_MC__c.field-meta.xml
<CustomField>
    <fullName>Finland_Sync_to_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to be used by marketing cloud to define MC</description>
    <label>Finland Sync to MC</label>
    <type>Checkbox</type>
</CustomField>