force-app/main/default/objects/Opportunity/fields/Free_Installation_Resources__c.field-meta.xml
<CustomField>
    <fullName>Free_Installation_Resources__c</fullName>
    <description>This field is ticked when 3 days is passed from contract signature</description>
    <formula>Today() &gt;= (Contract_Signed_Date__c + 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free Installation Resources</label>
    <type>Checkbox</type>
</CustomField>